# m1_acl

./: .gitignore  README.md
back/: Cargo.toml
back/src/: lib.rs
belote_back/: Cargo.toml
belote_back/src/: card.rs  error.rs  game.rs  lib.rs  main.rs  player.rs  rule.rs  rules.rs  saver.rs
belote_back/src/card/: color.rs  value.rs
belote_back/src/rules/: different_value_color.rs  same_value_color.rs  same_value_different_color.rs
front/: index.html  package-lock.json  package.json  tailwind.config.js
front/src/: App.jsx  main.jsx
front/src/pages/: Error.jsx  Game.jsx  Leaderboard.jsx  SelectUsername.jsx
