[package]
name = "belote_back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.89"
js-sys = "0.3.67"
rand = "0.8.5"

[dependencies.web-sys]
version = "0.3.67"
features = [
    "Storage"
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = "z"
strip = true
